--- a/admin_view/add_cuisine.html
+++ b/admin_view/add_cuisine.html
@@ -6,10 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Cuisine</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="../admin_styles/food_styles.css">
+    <link rel="stylesheet" href="../admin_styles/base.css">
 </head>
 <!-- I didn't add more elements, just a structure, because we will add logic in future -->
 
@@ -50,7 +49,7 @@
                 </form>
             </table>
         </div>
-        <div><button class="back"><a href="admin_page.html">Back</a></button></div>
+        <div class="back-btn"><button class="back"><a href="admin_page.html">Back</a></button></div>
     </div>
     
 </body>
