--- a/admin_view/admin_page.html
+++ b/admin_view/admin_page.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Page</title>
     <link rel="stylesheet" href="../admin_styles/food_styles.css">
+    <link rel="stylesheet" href="../admin_styles/base.css">
     
 </head>
 <!-- I didn't add more elements, just a structure, because we will add logic in future -->
@@ -43,7 +44,7 @@
                 </div>
                 <div class="card">
                     <h2>Users</h2>
-                    <a href="" id="users">View Customers</a>
+                    <a href="list_customers.html" id="users">View Customers</a>
                 </div>
                 <div class="card">
                     <h2>Orders</h2>
