--- a/admin_view/edit_category.html
+++ b/admin_view/edit_category.html
@@ -5,23 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Category</title>
+    <title>Edit Category</title>
     <link rel="stylesheet" href="../admin_styles/food_styles.css">
     <link rel="stylesheet" href="../admin_styles/base.css">
 </head>
 <!-- I didn't add more elements, just a structure, because we will add logic in future -->
 
 <body>
-    <div id="add_cat" class="container">
+    <div id="edit_cat" class="container">
 
-        <h1>Add Category</h1>
+        <h1>Edit Category</h1>
         <hr />
-        <div id="add_cat_table" name="">
+        <div id="edit_cat_table" name="">
             <table>
                 <form action="" method="post">
                     <tr>
                         <td><label for="category-name">Category Name:</label></td>
-                        <td><input type="text" name="category-name" id="cat_name"  required></td>
+                        <td><input type="text" name="category-name" id="cat_name"  disabled></td>
                     </tr>
                     <tr>
                         <td><label for="category-description">Category Description:</label></td>
@@ -47,8 +47,7 @@
                 </form>
             </table>
         </div>
-        <div class="back-btn"><button class="back"><a href="admin_page.html">Back</a></button></div>
-        <div><button type=""></button></div>
+        <div class="back-btn"><button class="back"><a href="list_categories.html">Back</a></button></div>
     </div>
 </body>
 
