--- a/admin_view/list_categories.html
+++ b/admin_view/list_categories.html
@@ -6,9 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Categories</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../admin_styles/base.css">
     <link rel="stylesheet" href="../admin_styles/food_styles.css">
     <style>
         img {
@@ -47,7 +45,7 @@
                         <td>
                             <img src="../resourses/food_images/pasta.jpg" alt="pasta" />
                         </td>
-                        <td><button class="editbtn"   id="pasta_i">Edit</button></td>
+                        <td><button class="editbtn" id="pasta_i"><a href="edit_category.html">Edit</a></button></td>
                     </tr>
                     <tr>
                         <td>2</td>
@@ -57,7 +55,7 @@
                         <td>
                             <img src="../resourses/food_images/veg-pizza.jpg" alt="pizza" />
                         </td>
-                        <td><button class="editbtn" id="lieoevfmy9slcjxpek">Edit</button></td>
+                        <td><button class="editbtn" id="lieoevfmy9slcjxpek"><a href="edit_category.html">Edit</a></button></td>
                     </tr>
                     <tr>
                         <td>3</td>
@@ -67,12 +65,12 @@
                         <td>
                             <img src="../resourses/food_images/lasagna-sandwich.jpg" alt="sandwich" />
                         </td>
-                        <td><button class="editbtn"  id="lieo5a33ja63n8pcstr">Edit</button></td>
+                        <td><button class="editbtn"  id="lieo5a33ja63n8pcstr"><a href="edit_category.html">Edit</a></button></td>
                     </tr>
                 </form>
             </table>
         </div>
-        <div><button class="back"><a href="admin_page.html">Back</a></button></div>
+        <div class="back-btn"><button class="back"><a href="admin_page.html">Back</a></button></div>
     </div>
 </body>
 
