--- a/admin_view/list_cuisines.html
+++ b/admin_view/list_cuisines.html
@@ -6,9 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Cuisines</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../admin_styles/base.css">
     <link rel="stylesheet" href="../admin_styles/food_styles.css">
     <style>
         
@@ -43,7 +41,7 @@
                         <td>
                             <img src="../resourses/food_images/chinese-food.jpg" alt="chinesefood" />
                         </td>
-                        <td><button class="editbtn" id="lieoc1dcq3wghgqnv9j">Edit</button></td>
+                        <td><button class="editbtn" id=""><a href="edit_cuisine.html">Edit</a></button></td>
                     </tr>
                     <tr>
                         <td>2</td>
@@ -53,7 +51,7 @@
                         <td>
                             <img src="../resourses/food_images/japanese-food.jpg" alt="japanesefood" />
                         </td>
-                        <td><button class="editbtn" id="lieobtajsobdp3t7kaa">Edit</button></td>
+                        <td><button class="editbtn" id=""><a href="edit_cuisine.html">Edit</a></button></td>
                     </tr>
                     <tr>
                         <td>3</td>
@@ -63,12 +61,12 @@
                         <td>
                             <img src="../resourses/food_images/thai-food.jpg" alt="thailandfood" />
                         </td>
-                        <td><button class="editbtn" id="lieoattq2g3m9krq7cx">Edit</button></td>
+                        <td><button class="editbtn" id=""><a href="edit_cuisine.html">Edit</a></button></td>
                     </tr>
                 </form>
             </table>
         </div>
-        <div><button class="back"><a href="admin_page.html">Back</a></button></div>
+        <div class="back-btn"><button class="back"><a href="admin_page.html">Back</a></button></div>
     </div>
 </body>
 
