--- a/admin_view/list_restaurants.html
+++ b/admin_view/list_restaurants.html
@@ -6,9 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Restaurants</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../admin_styles/base.css">
     <link rel="stylesheet" href="../admin_styles/food_styles.css">
     <style>
         img {
@@ -45,7 +43,7 @@
                         </td>
                         <td>North Street, Manasas</td>
                         <td>538-987-9854</td>
-                        <td><button class="editbtn" id="lieop7a10zb2oyq2tj6">Edit</button></td>
+                        <td><button class="editbtn" id=""><a href="edit_restaurant.html">Edit</a></button></td>
                     </tr>
                     <tr>
                         <td>2</td>
@@ -56,7 +54,7 @@
                         </td>
                         <td>South Street, DC</td>
                         <td>202-546-9878</td>
-                        <td><button class="editbtn" id="lieoov8ze6839cp7atn">Edit</button></td>
+                        <td><button class="editbtn" id=""><a href="edit_restaurant.html">Edit</a></button></td>
                     </tr>
                     <tr>
                         <td>3</td>
@@ -67,12 +65,12 @@
                         </td>
                         <td>Brooke Street, Arkington</td>
                         <td>202-569-7898</td>
-                        <td><button class="editbtn" id="lieooow08si7wyppet">Edit</button></td>
+                        <td><button class="editbtn" id=""><a href="edit_restaurant.html">Edit</a></button></td>
                     </tr>
                 </form>
                 </table>
             </div>
-            <div><button class="back"><a href="admin_page.html">Back</a></button></div>
+            <div class="back-btn"><button class="back"><a href="admin_page.html">Back</a></button></div>
     </div>
 </body>
 
