--- a/admin_view/edit_restaurant.html
+++ b/admin_view/edit_restaurant.html
@@ -5,22 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Restaurant</title>
+    <title>Edit Restaurant</title>
     <link rel="stylesheet" href="../admin_styles/base.css">
     <link rel="stylesheet" href="../admin_styles/food_styles.css">
 </head>
 <!-- I didn't add more elements, just a structure, because we will add logic in future -->
 <body>
-    <div id="add_rest" class="container">
+    <div id="edit_rest" class="container">
         
-            <h1>Add Restaurant</h1>
+            <h1>Edit Restaurant</h1>
             <hr />
-            <div id="add_rest_table" class="add-rest">
+            <div id="edit_rest_table" class="edit-rest">
             <table>
                 <form action="" method="post">
                 <tr>
                     <td><label for="restaraunt-name">Restaurant Name:</label></td>
-                    <td><input type="text" name="restaraunt-name" id="rest_name" required></td>
+                    <td><input type="text" name="restaraunt-name" id="rest_name" disabled></td>
                 </tr>
                 <tr>
                     <td><label for="restaraunt-address">Restaraunt Address:</label></td>
@@ -28,7 +28,7 @@
                 </tr>
                 <tr>
                     <td><label for="contact№">Contact №</label></td>
-                    <td><input type="tel" name="contact№" id="rest_cont" required></td>
+                    <td><input type="tel" name="contact№" id="rest_cont"></td>
                 </tr>
                 <tr>
                     <td><label for="restaurant-img">Restaurant Image:</label></td>
@@ -46,7 +46,7 @@
             </table>
         </div>
         </form>
-        <div class="back-btn"><button class="back"><a href="admin_page.html">Back</a></button></div>
+        <div class="back-btn"><button class="back"><a href="list_restaurants.html">Back</a></button></div>
     </div>
 </body>
 
