--- a/admin_view/list_fooditems.html
+++ b/admin_view/list_fooditems.html
@@ -6,9 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Food Items</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../admin_styles/base.css">
     <link rel="stylesheet" href="../admin_styles/food_styles.css">
     <style>
         img {
@@ -25,11 +23,11 @@
         
             <h1>All Food Items</h1>
             <hr />
-            <div id="lieogd1qeclrwy1lewe">
+            <div class="food-items">
                 <table>
                     <form action="" method="get">
                     <tr>
-                        <th>Food Item №</th>
+                        <th>Item №</th>
                         <th>Name</th>
                         <th>Discription</th>
                         <th>Available</th>
@@ -51,7 +49,7 @@
                             <img src="../resourses/food_images/veg-pizza.jpg"
                                 alt="vegpizza" />
                         </td>
-                        <td><button class="editbtn" id="lieoiq99tmbb1boz39">Edit</button></td>
+                        <td><button class="editbtn" id=""><a href="edit_fooditem.html">Edit</a></button></td>
                     </tr>
                     <tr>
                         <td>2</td>
@@ -65,7 +63,7 @@
                             <img src="../resourses/food_images/hot-and-sour-soup.jpg"
                                 alt="hot-and-sour-soup" />
                         </td>
-                        <td><button class="editbtn" id="lieohzacwny76c4dy4">Edit</button></td>
+                        <td><button class="editbtn" id=""><a href="edit_fooditem.html">Edit</a></button></td>
                     </tr>
                     <tr>
                         <td>3</td>
@@ -79,12 +77,12 @@
                             <img src="../resourses/food_images/lasagna-sandwich.jpg"
                                 alt="lasagna-sandwich" />
                         </td>
-                        <td><button class="editbtn" id="lieohfbpddrydeo1wv">Edit</button></td>
+                        <td><button class="editbtn" id=""><a href="edit_fooditem.html">Edit</a></button></td>
                     </tr>
                 </form>
                 </table>
             </div>
-            <div><button class="back"><a href="admin_page.html">Back</a></button></div>
+            <div class="back-btn"><button class="back"><a href="admin_page.html">Back</a></button></div>
     </div>
 </body>
 
