--- a/admin_view/list_orders.html
+++ b/admin_view/list_orders.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List of Orders</title>
     <link rel="stylesheet" href="../admin_styles/food_styles.css">
+    <link rel="stylesheet" href="../admin_styles/base.css">
 
 </head>
 
@@ -26,8 +27,6 @@
                         <th>Order Stage</th>
                         <th>Restaraunt</th>
                         <th>Edit</th>
-
-
                     </tr>
                     <tr>
                         <td>123DF45544DSFG</td>
@@ -37,7 +36,7 @@
                         <td>Paid</td>
                         <td>Shipping</td>
                         <td>Food Town</td>
-                        <td><button class="editbtn" id="liomwn3s2kvztk2s80w">Edit</button></td>
+                        <td><button class="editbtn" id=""><a href="edit_order.html">Edit</a></button></td>
                     </tr>
                     <tr>
                         <td>123DF45544DSFG</td>
@@ -47,7 +46,7 @@
                         <td>Paid</td>
                         <td>Shipping</td>
                         <td>Food Town</td>
-                        <td><button class="editbtn" id="liomwuqj2dyy1epgq">Edit</button></td>
+                        <td><button class="editbtn" id=""><a href="edit_order.html">Edit</a></button></td>
                     </tr>
                     <tr>
                         <td>123DF45544DSFG</td>
@@ -57,12 +56,12 @@
                         <td>Not Paid</td>
                         <td>Processing</td>
                         <td>Kingston Hotel</td>
-                        <td><button class="editbtn" id="liomwzq7un2i1dmcsm">Edit</button></td>
+                        <td><button class="editbtn" id=""><a href="edit_order.html">Edit</a></button></td>
                     </tr>
                 </form>
             </table>
         </div>
-        <div><button class="back"><a href="admin_page.html">Back</a></button></div>
+        <div class="back-btn"><button class="back"><a href="admin_page.html">Back</a></button></div>
     </div>
 </body>
 
