--- a/admin_view/list_restaurantmenus.html
+++ b/admin_view/list_restaurantmenus.html
@@ -6,9 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../admin_styles/base.css">
     <link rel="stylesheet" href="../admin_styles/food_styles.css">
     <style>
         img {
@@ -26,13 +24,16 @@
         <h1>Menu</h1>
         <hr />
         <div id="list_table_menu">
-            <div class="sel-rest"><label for="selres">Select Restaraunt</label></div>
-            <div class="sel-rest"><select name="selres" id="lieomuervctku8h1iv">
-                    <option value="disibled" selected="selected">Please select THE Restaurant</option>
-                    <option value="food-town-rest">Food Town</option>
-                    <option value="green-leaf-rest">Green Leaf Hotel</option>
-                    <option value="kingston-rest">Kingston Hotel</option>
-                </select></div>
+            <div class="selectrestaraunt">
+                <div><label for="selres">Select Restaraunt</label></div>
+                <div><select name="selres" id="lieomuervctku8h1iv">
+                        <option value="disibled" selected="selected">Please select THE Restaurant</option>
+                        <option value="food-town-rest">Food Town</option>
+                        <option value="green-leaf-rest">Green Leaf Hotel</option>
+                        <option value="kingston-rest">Kingston Hotel</option>
+                    </select>
+                </div>
+            </div>
 
             <hr />
             <table>
@@ -66,7 +67,7 @@
                 </form>
             </table>
         </div>
-        <div><button class="back"><a href="admin_page.html">Back</a></button></div>
+        <div class="back-btn"><button class="back"><a href="admin_page.html">Back</a></button></div>
     </div>
 </body>
 
