--- a/admin_view/list_customers.html
+++ b/admin_view/list_customers.html
@@ -6,6 +6,11 @@
     <title>List of Customers</title>
     <link rel="stylesheet" href="../admin_styles/food_styles.css">
     <link rel="stylesheet" href="../admin_styles/base.css">
+    <style>
+        td:nth-child(3){
+            word-break: break-all;
+        }
+    </style>
 </head>
 <body>
     <div id="list_customers" class="container">
@@ -47,7 +52,7 @@
                     </tr>
                     <tr>
                         <td>James Bond</td>
-                        <td>202-514-5689/td>
+                        <td>202-514-5689</td>
                         <td>jamesbond@gmail.com</td>
                         <td>1213 Arden St., Molok, VA</td>
                         <td>56</td>
