--- a/admin_view/list_orders.html
+++ b/admin_view/list_orders.html
@@ -7,6 +7,11 @@
     <title>List of Orders</title>
     <link rel="stylesheet" href="../admin_styles/food_styles.css">
     <link rel="stylesheet" href="../admin_styles/base.css">
+    <style>
+        td:first-child{
+            word-break: break-all;
+        }
+    </style>
 
 </head>
 
