--- a/admin_view/add_category.html
+++ b/admin_view/add_category.html
@@ -8,6 +8,7 @@
     <title>Add Category</title>
     <link rel="stylesheet" href="../admin_styles/food_styles.css">
     <link rel="stylesheet" href="../admin_styles/base.css">
+    <link rel="stylesheet" href="../admin_styles/mobile.css">
 </head>
 <!-- I didn't add more elements, just a structure, because we will add logic in future -->
 
