--- a/admin_view/admin_page.html
+++ b/admin_view/admin_page.html
@@ -8,12 +8,15 @@
     <title>Admin Page</title>
     <link rel="stylesheet" href="../admin_styles/food_styles.css">
     <link rel="stylesheet" href="../admin_styles/base.css">
-    
+    <link rel="stylesheet" href="../admin_styles/mobile.css">
+
 </head>
 <!-- I didn't add more elements, just a structure, because we will add logic in future -->
 
 <body>
-    
+    <!-- <script>
+        alert("Food Order app is under development!")
+    </script> -->
     <div id="555" class="container">
         <div class="label"></div>
         <h1 class="h1">Admin Dashboard</h1>
