--- a/admin_view/list_customers.html
+++ b/admin_view/list_customers.html
@@ -6,6 +6,7 @@
     <title>List of Customers</title>
     <link rel="stylesheet" href="../admin_styles/food_styles.css">
     <link rel="stylesheet" href="../admin_styles/base.css">
+    <link rel="stylesheet" href="../admin_styles/mobile.css">
     <style>
         td:nth-child(3){
             word-break: break-all;
