--- a/admin_view/list_orders.html
+++ b/admin_view/list_orders.html
@@ -7,6 +7,7 @@
     <title>List of Orders</title>
     <link rel="stylesheet" href="../admin_styles/food_styles.css">
     <link rel="stylesheet" href="../admin_styles/base.css">
+    <link rel="stylesheet" href="../admin_styles/mobile.css">
     <style>
         td:first-child{
             word-break: break-all;
