--- a/admin_view/list_cuisines.html
+++ b/admin_view/list_cuisines.html
@@ -8,6 +8,7 @@
     <title>All Cuisines</title>
     <link rel="stylesheet" href="../admin_styles/base.css">
     <link rel="stylesheet" href="../admin_styles/food_styles.css">
+    <link rel="stylesheet" href="../admin_styles/mobile.css">
     <style>
         
     </style>
