--- a/admin_view/list_fooditems.html
+++ b/admin_view/list_fooditems.html
@@ -8,6 +8,7 @@
     <title>All Food Items</title>
     <link rel="stylesheet" href="../admin_styles/base.css">
     <link rel="stylesheet" href="../admin_styles/food_styles.css">
+    <link rel="stylesheet" href="../admin_styles/mobile.css">
     <style>
         img {
             width: 100px;
